src/containers/EditProfile/FormEditProfile/styles.module.scss
.account {
  &_avatar {
    margin-bottom: rem(24px);
    position: relative;
    border-radius: 50%;
    overflow: hidden;
    width: rem(120px);
    height: rem(120px);

    &_el {
      position: relative;
      border-radius: 50%;
      overflow: hidden;
      cursor: pointer;
    }

    &_label {
      position: absolute;
      background: rgba($primary-brand, 0.6);
      height: 100%;
      width: 100%;
      z-index: 2;
      top: 0;
      left: 0;
      opacity: 0;
      transition: opacity 0.4s $easeOutCubic;
      display: flex;
      align-items: center;
      justify-content: center;
      color: white;
      pointer-events: none;
    }

    &:hover {
      .account_avatar_label {
        opacity: 1;
      }
    }
  }

  &_form {
    flex: 1;

    h4 {
      margin-bottom: rem(32px);
    }

    @include min-tablet {
      max-width: rem(515px);
    }

    &_actions {
      display: flex;
      gap: rem(10px);
    }
  }

  &_wallet {
    &_action {
      display: flex;
      justify-content: flex-end;
      gap: rem(24px);

      .walletBtn {
        margin-top: 0;
      }
    }
  }
}

.input_nickname {
  margin-bottom: rem(8px);
}

.input_social {
  display: flex;
  flex-direction: column;
  gap: rem(16px);
}

.input_bio textarea {
  padding: rem(16);
}

.submit_btn_lists {
  display: flex;
  justify-content: flex-end;
}

.walletBtn {
  margin-top: rem(24px);
}

.walletValue {
  background: #f8f8f8;
  padding: 1.6rem 1.7rem;
  opacity: 0.5;
  pointer-events: none;
}

.input_item {
  margin-bottom: rem(16px);

  input[type="readonly"] {
    color: #a5a5a5;
  }
}

